--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,9 @@
 			</plugin>
 
 			<plugin>
-			  <groupId>org.mortbay.jetty</groupId>
-			  <artifactId>jetty-maven-plugin</artifactId>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>9.3.0.M2</version>
 			</plugin>
 
 			<plugin>
