--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.3</version>
+				<version>2.10</version>
 				<executions>
 					<execution>
 						<phase>package</phase>
@@ -45,9 +45,9 @@
 						<configuration>
 							<artifactItems>
 								<artifactItem>
-									<groupId>org.mortbay.jetty</groupId>
+									<groupId>org.eclipse.jetty</groupId>
 									<artifactId>jetty-runner</artifactId>
-									<version>7.5.4.v20111024</version>
+									<version>9.3.9.M1</version>
 									<destFileName>jetty-runner.jar</destFileName>
 								</artifactItem>
 							</artifactItems>
@@ -77,11 +77,10 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>com.microsoft.windowsazure.storage</groupId>
-			<artifactId>microsoft-windowsazure-storage-sdk</artifactId>
-			<version>1.1.0</version>
+			<groupId>com.microsoft.azure</groupId>
+			<artifactId>azure-storage</artifactId>
+			<version>4.2.0</version>
 		</dependency>
-
 
 		<dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
@@ -95,8 +94,8 @@
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -128,8 +127,8 @@
 
 	</dependencies>
 	<properties>
-		<jersey.version>2.17</jersey.version>
-		<jackson.version>2.4.4</jackson.version>
+		<jersey.version>2.22</jersey.version>
+		<jackson.version>2.7.4</jackson.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 </project>
